build!: make java-modules and move classes to packages