@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'org.jmantic'
-version '0.3.4'
+version '0.4.0'
 
 sourceCompatibility = 17
 targetCompatibility = 17
@@ -25,11 +25,16 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
+}
+
+compileJava {
+    options.compilerArgs += ['--add-reads', 'JMantic.main=ALL-UNNAMED']
 }
 
 publishing {
@@ -47,7 +52,7 @@ publishing {
         gpr(MavenPublication) {
             groupId 'org.jmantic'
             artifactId 'jmantic'
-            version '0.3.4'
+            version '0.4.0'
             from(components.java)
         }
     }
@@ -57,7 +62,7 @@ publishing {
 // Create jar archive with dependencies
 jar {
     from {
-        configurations.runtimeClasspath.filter{ it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.runtimeClasspath.filter { it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
     }
     duplicatesStrategy DuplicatesStrategy.EXCLUDE
 }
@@ -73,4 +78,5 @@ jacocoTestReport {
     }
 
 }
+
 
